--- a/restaurant.html
+++ b/restaurant.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--TODO: Change the content of this meta tag-->
-    <meta name="description" content="A responsive restaurant reviews app">w
+    <meta name="description" content="A responsive restaurant reviews app">
     <!-- Normalize.css for better cross-browser consistency -->
     <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <!-- Main CSS file -->
